--- a/tools/BUILD.bazel
+++ b/tools/BUILD.bazel
@@ -4,7 +4,7 @@ load("//bzl:rules.bzl",
      # "boot_executable",
      "boot_library",
      # "boot_lexer",
-     "build_module",
+     # "build_module",
      # "build_tool",
      "compiler_module",
      "compiler_signature",
